--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
 	<groupId>dk.bayes</groupId>
 	<artifactId>bayes-scala</artifactId>
 	<name>bayes-scala</name>
-	<version>0.1-SNAPSHOT</version>
+	<version>0.1</version>
 	<inceptionYear>2011</inceptionYear>
 	<url>https://github.com/danielkorzekwa/bayes-scala</url>
 
