--- a/pom.xml
+++ b/pom.xml
@@ -114,6 +114,12 @@
 			<artifactId>ejml</artifactId>
 			<version>0.20</version>
 		</dependency>
+		
+		<dependency>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-math3</artifactId>
+			<version>3.1.1</version>
+		</dependency>
 
 		<!-- Test dependencies -->
 		<dependency>
