--- a/pom.xml
+++ b/pom.xml
@@ -13,7 +13,7 @@
 
 	<!-- Properties -->
 	<properties>
-		<scala.version>2.9.2</scala.version>
+		<scala.version>2.10.0</scala.version>
 		<junit.version>4.4</junit.version>
 	</properties>
 
@@ -114,11 +114,23 @@
 			<artifactId>ejml</artifactId>
 			<version>0.20</version>
 		</dependency>
-		
+
 		<dependency>
 			<groupId>org.apache.commons</groupId>
 			<artifactId>commons-math3</artifactId>
 			<version>3.1.1</version>
+		</dependency>
+
+		<dependency>
+			<groupId>com.typesafe</groupId>
+			<artifactId>scalalogging-slf4j_2.10</artifactId>
+			<version>1.0.1</version>
+		</dependency>
+		
+		<dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>slf4j-log4j12</artifactId>
+			<version>1.7.2</version>
 		</dependency>
 
 		<!-- Test dependencies -->
