--- a/pom.xml
+++ b/pom.xml
@@ -128,6 +128,12 @@
 		</dependency>
 
 		<dependency>
+			<groupId>org.scalanlp</groupId>
+			<artifactId>breeze_2.10</artifactId>
+			<version>0.7</version>
+		</dependency>
+
+		<dependency>
 			<groupId>org.slf4j</groupId>
 			<artifactId>slf4j-log4j12</artifactId>
 			<version>1.7.2</version>
