Set plugin version for better stability
Minimum changes required to improve build stability.
1) Fix plugin versions (maven-scala-plugin)
2) Specify minimum maven version

Notes : an even higher version of Maven could be set as prerequisite (3.0.5+), maven-eclipse-plugin could be upgraded (2.8 -> 2.9).

--- a/pom.xml
+++ b/pom.xml
@@ -15,7 +15,12 @@
 	<properties>
 		<scala.version>2.10.3</scala.version>
 		<junit.version>4.4</junit.version>
+		<maven-scala-plugin.version>2.15.2</maven-scala-plugin.version>
 	</properties>
+
+	<prerequisites>
+		<maven>2.2.1</maven>
+	</prerequisites>
 
 	<build>
 
@@ -59,6 +64,7 @@
 			<plugin>
 				<groupId>org.scala-tools</groupId>
 				<artifactId>maven-scala-plugin</artifactId>
+				<version>${maven-scala-plugin.version}</version>
 				<executions>
 					<execution>
 						<goals>
@@ -94,6 +100,7 @@
 			<plugin>
 				<groupId>org.scala-tools</groupId>
 				<artifactId>maven-scala-plugin</artifactId>
+				<version>${maven-scala-plugin.version}</version>
 			</plugin>
 		</plugins>
 	</reporting>
