--- a/pom.xml
+++ b/pom.xml
@@ -91,9 +91,9 @@
 		</dependency>
 
 		<dependency>
-			<groupId>com.typesafe</groupId>
-			<artifactId>scalalogging-slf4j_2.10</artifactId>
-			<version>1.0.1</version>
+			<groupId>com.typesafe.scala-logging</groupId>
+			<artifactId>scala-logging-slf4j_2.10</artifactId>
+			<version>2.1.2</version>
 		</dependency>
 
 		<dependency>
