--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ scala:
 - 2.11.6
 
 after_success:
-- test $TRAVIS_PULL_REQUEST == "false" && test $TRAVIS_BRANCH == "master" && sbt ++$TRAVIS_SCALA_VERSION publish
+- test $TRAVIS_PULL_REQUEST == "false" && test $TRAVIS_BRANCH == "master" && sbt ++$TRAVIS_SCALA_VERSION publish test:publish
 
 env:
   global:
